bugs/tests/fuzz-05-18-13-21-59/r_649_r_20_issue3056_F10_P20_9_M1.stderr
likely_hits/r_649_r_20_issue3056_F10_P20_9_M1.p4(2): [--Werror=type-error] error: string: cast not supported
 e1 = ((string) ({ ... }
        ^^^^^^
In file: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172
Compiler Bug: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172: Null srcType

